--- a/src/assets/css/CurtainContainer.css
+++ b/src/assets/css/CurtainContainer.css
@@ -1,6 +1,7 @@
 /* CurtainContainer.css */
 .curtain-container {
-    position: relative;
+    position: absolute;
+    
     width: 100vw;
     height: 100vh;
     overflow: hidden;
