--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -1,6 +1,6 @@
 body {
   
-    background: url(../img/1000_F_577639532_5mYr70FESqQo7wrbTl6OjgqVgQsiPvuF.jpg);
+    background: white;
     background-repeat: no-repeat;
     background-size: cover;
       
@@ -36,7 +36,7 @@ body {
 }
 #profileBanner{
     padding: 5px;
-    background: url(../img/1000_F_577639532_5mYr70FESqQo7wrbTl6OjgqVgQsiPvuF.jpg);
+    background: black;
     border: 2px solid black
 }
 .cont  {
