--- a/src/components/impostazioni/impostazioni.css
+++ b/src/components/impostazioni/impostazioni.css
@@ -1,46 +1,10 @@
-
-    .account-settings .user-profile {
-        margin: 0 0 1rem 0;
-        padding-bottom: 1rem;
-        text-align: center;
-    }
-    .account-settings .user-profile .user-avatar {
-        margin: 0 0 1rem 0;
-    }
-    .account-settings .user-profile .user-avatar img {
-        width: 90px;
-        height: 90px;
-        -webkit-border-radius: 100px;
-        -moz-border-radius: 100px;
-        border-radius: 100px;
-    }
-    .account-settings .user-profile h5.user-name {
-        margin: 0 0 0.5rem 0;
-    }
-    .account-settings .user-profile h6.user-email {
-        margin: 0;
-        font-size: 0.8rem;
-        font-weight: 400;
-    }
-    .account-settings .about {
-        margin: 1rem 0 0 0;
-        font-size: 0.8rem;
-        text-align: center;
-    }
-    .card {
-        background: #272E48;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        border-radius: 5px;
-        border: 0;
-        margin-bottom: 1rem;
-    }
-    .form-control {
-        border: 1px solid #596280;
-        -webkit-border-radius: 2px;
-        -moz-border-radius: 2px;
-        border-radius: 2px;
-        font-size: .825rem;
-        background: #1A233A;
-        color: #bcd0f7;
-    }
+body{
+    background: url(../../assets/img/_c92edb1b-9529-4780-9d18-79baed52bf44.jfif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.box{
+    background: transparent;
+    backdrop-filter: blur(3px);
+}
