--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -1,10 +1,4 @@
-body {
-  
-    background: white;
-    background-repeat: no-repeat;
-    background-size: cover;
-      
-}
+
 .navbar {
     position: absolute;
     top: 0;
@@ -31,7 +25,7 @@ body {
     position: absolute;
     right: 5px;
     top: 5px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border: 2px solid black
 }
 #profileBanner{
