--- a/src/assets/css/Game.css
+++ b/src/assets/css/Game.css
@@ -1,31 +1,11 @@
 
 .container-custom-width {
+  width: 100%;
     max-width: 100%; 
   }
   
-  @media (min-width: 576px) {
-    .container-custom-width {
-      max-width: 640px; 
-    }
-  }
   
-  @media (min-width: 768px) {
-    .container-custom-width {
-      max-width: 640px; 
-    }
-  }
   
-  @media (min-width: 992px) {
-    .container-custom-width {
-      max-width: 640px; 
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .container-custom-width {
-      max-width: 640px; 
-    }
-  }
   
 
   .boxTop {
