--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -61,3 +61,15 @@
     left: 50%;
     transform: translate(-50%);
 }
+.shadow-blue {
+ 
+    box-shadow: 0 0 10px 1px rgb(2, 194, 228);
+  }
+  .shadow-red {
+   
+    box-shadow: 0 0 10px 1px rgb(255, 34, 1); 
+  }
+  .shadow-game {
+   border: 4px solid white;
+    box-shadow: 0 0px 15px 2px rgb(2, 194, 228);
+  }
