--- a/src/assets/css/Game.css
+++ b/src/assets/css/Game.css
@@ -90,19 +90,19 @@
     font-size: 5px;
   }
 
-  #cell-1-1,#cell-1-2,#cell-2-1,#cell-2-2 {background-color: red;}
+  #cell-1-1,#cell-1-2,#cell-2-1,#cell-2-2 {background-color: red; border: 3px solid white;}
 
-  #cell-1-9,#cell-1-8,#cell-2-9,#cell-2-8 {background-color: blue;}
+  #cell-1-9,#cell-1-8,#cell-2-9,#cell-2-8 {background-color: blue;  border: 3px solid white;}
 
 
-  #cell-8-1,#cell-8-2,#cell-9-1,#cell-9-2 {background-color: green;}
+  #cell-8-1,#cell-8-2,#cell-9-1,#cell-9-2 {background-color: green;  border: 3px solid white;}
 
-  #cell-8-9,#cell-8-8,#cell-9-9,#cell-9-8 {background-color: darkorange;}
+  #cell-8-9,#cell-8-8,#cell-9-9,#cell-9-8 {background-color: darkorange;  border: 3px solid white;}
 
-  #cell-4-0,#cell-5-1,#cell-5-2,#cell-5-3,#cell-5-4 {background-color: red;}
-  #cell-0-6,#cell-1-5,#cell-2-5,#cell-3-5,#cell-4-5 {background-color: blue;}
-  #cell-10-4,#cell-8-5,#cell-8-5,#cell-7-5,#cell-6-5,#cell-9-5{background-color: green;}
-  #cell-6-10, #cell-5-6,#cell-5-7,#cell-5-8,#cell-5-9 {background-color: darkorange;}
+  #cell-4-0,#cell-5-1,#cell-5-2,#cell-5-3,#cell-5-4 {background-color: red;  border: 3px solid white;}
+  #cell-0-6,#cell-1-5,#cell-2-5,#cell-3-5,#cell-4-5 {background-color: blue;  border: 3px solid white;}
+  #cell-10-4,#cell-8-5,#cell-8-5,#cell-7-5,#cell-6-5,#cell-9-5{background-color: green;  border: 3px solid white;}
+  #cell-6-10, #cell-5-6,#cell-5-7,#cell-5-8,#cell-5-9 {background-color: darkorange;  border: 3px solid white;}
   
   #cell-4-1,#cell-4-2,#cell-4-3,#cell-4-4,#cell-3-4,#cell-2-4,#cell-1-4,#cell-1-4,#cell-0-4,#cell-0-5{background-color: gray;}
   #cell-1-6,#cell-2-6,#cell-3-6,#cell-4-6,#cell-4-7,#cell-4-8,#cell-4-9,#cell-4-10,#cell-5-10{background-color: gray;}
@@ -134,7 +134,7 @@
     background-color: blue;
     width: 50%;
     height: 50%;
-    border: black solid 5px;
+    border:  white solid 5px;
     border-radius: 100%;
     transform: translate(50%, 50%);
 
@@ -146,7 +146,7 @@
     background-color: green;
     width: 50%;
     height: 50%;
-    border: black solid 5px;
+    border:  white solid 5px;
     border-radius: 100%;
     transform: translate(50%, 50%);
 
@@ -158,7 +158,7 @@
     background-color: yellow;
     width: 50%;
     height: 50%;
-    border: black solid 5px;
+    border:  black solid 5px;
     border-radius: 100%;
     transform: translate(50%, 50%);
 
